# Quantum_Signature

./: .gitignore  README.md  pyproject.toml
animation/: qds_animation.html
artifacts/: demo_quick_check.json  forgery_results.csv  keygen_bundle.json  noise_experiment.csv  repudiation_no_dist_swap.csv  repudiation_with_dist_swap.csv  signed_message.json
notebooks/: demo.ipynb
quantum_digital_signatures/: README.md
quantum_digital_signatures/animation/: qds_animation.html
quantum_digital_signatures/notebooks/: demo.ipynb
quantum_digital_signatures/src/qds/: cli.py
quantum_digital_signatures/src/qds/experiments/: forgery.py
quantum_digital_signatures/src/qds/protocol/: __init__.py  distribution.py  entities.py  signing.py
quantum_digital_signatures/src/qds/qowf/: __init__.py  base.py  fingerprint.py
quantum_digital_signatures/src/qds/quantum/: utils.py
quantum_digital_signatures/tests/: test_protocol.py  test_verify.py
src/qds/: __init__.py  cli.py
src/qds/__pycache__/: __init__.cpython-311.pyc.1887504086768  cli.cpython-311.pyc.1887504086768
src/qds/experiments/: __init__.py  noise.py  repudiation.py
src/qds/experiments/__pycache__/: __init__.cpython-311.pyc.1887504104368  forgery.cpython-311.pyc.1887504104368  noise.cpython-311.pyc.1887504104368  repudiation.cpython-311.pyc.1887504104368
src/qds/protocol/: outcomes.py  verification.py
src/qds/protocol/__pycache__/: __init__.cpython-311.pyc.1887504104368  (+5 more)
src/qds/qowf/: angle1q.py
src/qds/quantum/: __init__.py  swap_test.py  verify.py
tests/: test_swap_test.py
(+8 files in other folders)
